crates/wdl-analysis/tests/validation/duplicate-hints/source.errors
error: task `t` contains a duplicate hints section
  ┌─ tests/validation/duplicate-hints/source.wdl:8:5
  │
6 │     hints {}
  │     ----- first hints section is defined here
7 │ 
8 │     hints {}
  │     ^^^^^ this hints section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-hints/source.wdl:14:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
14 │ task t {
   │      ^ this task conflicts with a previously used name

error: workflow `w` contains a duplicate hints section
   ┌─ tests/validation/duplicate-hints/source.wdl:25:5
   │
23 │     hints {}
   │     ----- first hints section is defined here
24 │ 
25 │     hints {}
   │     ^^^^^ this hints section is a duplicate

